{
    "name": "ActionControls",
    "maps": [
        {
            "name": "Action",
            "id": "96878f37-fa54-4ade-a42b-6384565aa882",
            "actions": [
                {
                    "name": "ArrowUp",
                    "type": "Button",
                    "id": "a7c50ca4-e20a-4fdd-a571-f0788d2d4284",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ArrowDown",
                    "type": "Button",
                    "id": "efcfb50b-3a36-4309-9450-c7de13f8e1be",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "EnterButton",
                    "type": "Button",
                    "id": "4d3978a2-2fa0-468f-baa3-4dec5d973358",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "406dface-9b99-4c10-907d-e7a862fd7da6",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ArrowUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ef6a5061-1f8e-469e-bf82-ebc923be9479",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ArrowUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c9b79bbd-88e3-4a88-8376-8090f8d1ca8d",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ArrowDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9a7721b6-8ec9-48d4-9b35-a621b162cf22",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ArrowDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bb09e15e-3455-4a21-9b75-0cd8265ccb64",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EnterButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}